2002-10-14  Kevin Buettner  <kevinb@redhat.com>

	* c-lang.h (c_type_print_varspec_prefix): Delete.
	* c-typeprint.c (c_type_print_varspec_prefix): Make static.  Add
	``need_post_space'' parameter.  Adjust all callers.

2002-10-14  Daniel Jacobowitz  <drow@mvista.com>  
 
	* config/mips/nm-irix4.h (HAVE_NONSTEPPABLE_WATCHPOINT): Define to 1.
	* config/mips/nm-irix5.h (HAVE_NONSTEPPABLE_WATCHPOINT): Likewise.
	* config/mips/tm-embed.h (HAVE_NONSTEPPABLE_WATCHPOINT): Likewise.
	* config/pa/nm-hppah.h (HAVE_NONSTEPPABLE_WATCHPOINT): Likewise.

2002-10-13  Adam Fedor  <fedor@gnu.org>

	* source.c (print_source_lines): Update comments.

2002-10-13  Adam Fedor  <fedor@gnu.org>

	* valops.c (value_of_local): New function.
	(value_of_this): Use it.
	* value.h (value_of_local): Declared.

2002-10-13  Adam Fedor  <fedor@gnu.org>

	* parse.c: (length_of_subexp, prefixify_subexp): Handle
	OP_MSGCALL, OP_SELECTOR, OP_NSSTRING, and OP_SELF.

2002-10-12  Adam Fedor  <fedor@gnu.org>

	* language.c (binop_result_type): Add language_objc to case.
        (integral_type): Likewise.
        (character_type): Likewise.
        (string_type): Likewise.
        (boolean_type): Likewise.
        (structured_type): Likewise.
        (binop_type_check): Likewise.

2002-10-11  Adam Fedor  <fedor@gnu.org>

	* printcmd.c (address_info): Print 'self' for ObjC.

2002-10-11  Adam Fedor  <fedor@gnu.org>

	* expression.h: New ops OP_NSSTRING, OP_SELECTOR, OP_MSGCALL, and
	OP_SELF.

2002-10-11  Adam Fedor  <fedor@gnu.org>

	* language.h (CAST_IS_CONVERSION): Add language_objc.

2002-10-11  Adam Fedor  <fedor@gnu.org>

	* defs.h (enum language): Add language_objc.

2002-10-11  Klee Dienes  <kdienes@apple.com>

        * findvar.c (read_memory_typed_address): New function.
        * gdbcore.h (read_memory_typed_address): Add prototype.
        * blockframe.c (sigtramp_saved_pc): Use read_memory_typed_address
	to read a value destined for a CORE_ADDR, not read_memory_integer.