@@ -1,3 +1,9 @@
+2002-10-14  Adam Fedor  <fedor@gnu.org>
+
+	* utils.c (puts_filtered_tabular): New function.
+	(fprintf_symbol_filtered): Get ObjC demangled name.
+	* defs.h (puts_filtered_tabular): Declared.
+
 2002-10-14  Kevin Buettner  <kevinb@redhat.com>
 
 	* c-lang.h (c_type_print_varspec_prefix): Delete.
